--- a/ProjectC/force-app/main/default/lwc/readSMBCustomerCmp_2/readSMBCustomerCmp_2.html
+++ b/ProjectC/force-app/main/default/lwc/readSMBCustomerCmp_2/readSMBCustomerCmp_2.html
@@ -1,3 +1,5 @@
+<!-- sldsValidatorIgnore -->
+<!-- sldsValidatorIgnore -->
 <template>
         <lightning-card  variant="Narrow"  title="SMB Customers (Accounts) - ListofRecords" icon-name="standard:account">
                 <template if:true={ListofAccounts}>
